--- a/project/static/styles.css
+++ b/project/static/styles.css
@@ -86,7 +86,7 @@ h2, h3, h5, p{
 }
 .formelements{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     flex-flow: row nowrap;
 }
 .cont{
