--- a/project/static/styles.css
+++ b/project/static/styles.css
@@ -84,7 +84,8 @@ h2, h3, h5, p{
     justify-content: start;
     flex-flow: row nowrap;
 }
-.formelements{
+.formelements div{
+    margin-top:10px ;
     display: flex;
     justify-content: space-around;
     flex-flow: row nowrap;
